plugins {
	id 'org.springframework.boot' version '4.0.2' apply false
	id 'io.spring.dependency-management' version '1.1.7' apply false
}

allprojects {
	group = 'com.personal'
	version = '0.0.1-SNAPSHOT'
	description = 'Demo project for Spring Boot'

	repositories {
		mavenCentral()
	}
}

subprojects {
	apply plugin: 'java-library'
	apply plugin: 'io.spring.dependency-management'

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(21)
		}
	}

	// 스프링 부트 족보 가져오기
	dependencyManagement {
		imports {
			mavenBom "org.springframework.boot:spring-boot-dependencies:4.0.2"
		}
	}

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}

	// Spring MVC 의 @PathVariable / @RequestParam 이 reflection 으로 파라미터 이름을 읽으므로,
	// boot 플러그인이 없는 모듈에도 -parameters 를 명시적으로 켠다.
	tasks.withType(JavaCompile).configureEach {
		options.compilerArgs << '-parameters'
	}

	tasks.named('test') {
		useJUnitPlatform()
	}
}
